# Suno_Studio

./: .gitignore  README.md  bridge_security.py  package.json  pyproject.toml
.github/workflows/: ci.yml
bridge/: api.py  app.py  bootstrap.py  client.py  downloader.py  errors.py  main.py  middleware.py  models.py  recovery.py  server.py
bridge/adapters/: __init__.py  base.py  manual_suno.py  mock_suno.py  official_api.py  web_session.py
bridge/schemas/: api_models.py  manifest_schema.py
bridge/services/: import_service.py  job_service.py  transcode_service.py
bridge/tests/: test_bridge_integration.py  test_client_contract_vectors.py  test_protocol_compat.py
docs/: ara_plan.md  host_matrix.md  ipc_contract.md  plugin_client_architecture.md  provider_contract.md  reaper_adapter.md  security.md  user_workflows.md
host_adapters/reaper/: export_time_selection_to_file.lua  insert_generated_file_at_cursor.lua
plugin/: import_ui.py  session_state.py
plugin_juce/: CMakeLists.txt  README.md
plugin_juce/include/: BridgeClientSurface.h  BridgeController.h  BridgeDiscovery.h  BridgeHttpClient.h  BridgeModels.h  PluginProcessor.h  PluginStateStore.h
plugin_juce/src/: BridgeClientSurface.cpp  BridgeController.cpp  BridgeDiscovery.cpp  BridgeHttpClient.cpp  BridgeModels.cpp  PluginEditor.cpp  PluginProcessor.cpp  PluginStateStore.cpp
plugin_juce/standalone/: StandaloneMain.cpp
plugin_juce/test_vectors/: manual_contract_vectors.json  multipart_vectors.json  signing_vectors.json
plugin_juce/tests/: BridgeContractVectors.cpp
src/services/: HostCapabilityService.js
src/ui/: hostCapabilityPanel.js
storage/: durable_storage.py
tests/: hostCapabilityService.test.mjs  reaperAdapterContracts.test.mjs  test_bridge.py  test_bridge_security.py
