[project]
name = "suno-studio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.2",
  "uvicorn>=0.42.0",
  "python-multipart>=0.0.22",
  "httpx>=0.28.1",
  "pytest>=8.4.0",
]

[project.scripts]
suno-bridge = "bridge.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
